Update 'go-orjywxyn' component image to: quay.io/rhtap_qe/go-orjywxyn:bb66e849d8d6d5f951fb1eb0eabaddc6159fe5db@sha256:4efee24bf90ff147c72d344540aaa335d8d5725e1c8a9b1e014f2ac2620e0971

--- a/components/go-orjywxyn/overlays/development/deployment-patch.yaml
+++ b/components/go-orjywxyn/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-orjywxyn
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-orjywxyn:bb66e849d8d6d5f951fb1eb0eabaddc6159fe5db@sha256:4efee24bf90ff147c72d344540aaa335d8d5725e1c8a9b1e014f2ac2620e0971
+          name: container-image
